lesson 8: creating our first collection

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -20,10 +20,12 @@
 	</div>
 </article>
 
-{% set ctaContent = primaryCTA %}
-{% include "partials/cta.html" %}
+{%- set ctaContent = primaryCTA %}
+{%- include "partials/cta.html" %}
 
-{% set ctaContent = cta %}
+{% include "partials/featured-work.html" %}
+
+{%- set ctaContent = cta %}
 {% include "partials/cta.html" %}
 
 {% endblock %}
